<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_one_signup"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="47dp"
        android:contentDescription="@string/bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/android_exam"
        android:textColor="#FFFF"
        android:textSize="40sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/register"
        android:textColor="#FFFF"
        android:textSize="25sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="92dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#FFFF"
            android:textColorHighlight="#03A9F4"
            android:textColorHint="#FFFF"
            android:textColorLink="#2196F3"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#DFDDDD" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#FFFF"
            android:textColorHighlight="#03A9F4"
            android:textColorHint="#FFFF"
            android:textColorLink="#2196F3"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#DFDDDD" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#FFFF"
            android:textColorHighlight="#03A9F4"
            android:textColorHint="@android:color/white"
            android:textColorLink="#2196F3"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#DFDDDD" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#FFFF"
            android:backgroundTintMode="screen"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="35dp"
                android:onClick="goToLogin"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textColor="#FFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>